apps/immich/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
spec:
  template:
    spec:
      runtimeClassName: nvidia
      securityContext:
        runAsUser: 1000
        runAsGroup: 991
        fsGroup: 991
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v2.3.1
          ports:
            - name: http
              containerPort: 2283
              protocol: TCP
          volumeMounts:
            - name: immich-data
              mountPath: /data
            - name: immich-imports
              mountPath: /imports
              readOnly: true
              subPath: photos/imports
          resources:
            requests:
              memory: "256M"
              cpu: "100m"
            limits:
              memory: "4Gi"
              cpu: "2"
              nvidia.com/gpu-all: 1
      volumes:
        - name: immich-data
          persistentVolumeClaim:
            claimName: immich-data
        - name: immich-imports
          persistentVolumeClaim:
            claimName: immich-imports
