apps/immich/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
spec:
  ports:
    - name: http
      port: 80
      targetPort: 2283
      protocol: TCP
  type: ClusterIP
